# MSc_WI_DSCI

./: README.md  giraffenpuzzle-evaluation.ipynb  giraffenpuzzle-objektextraktion.ipynb  giraffenpuzzle-training.ipynb  object_extraction.py  pyproject.toml
01_Übungen/: Übungen.ipynb
03_Objektextraktion/: giraffenpuzzle-objektextraktion.ipynb  objektextraktion.ipynb
04_Training/: giraffenpuzzle-training.ipynb  train_test_split.xlsx  training.ipynb
05_Evaluation/: evaluation.ipynb  giraffenpuzzle-evaluation.ipynb
