[project]
name = "msc-wi-dsci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "progressbar2>=4.5.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.66.0",
]
