[project]
name = "msc-wi-dsci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "progressbar2>=4.5.0",
    "reportlab>=4.4.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scikit-plot>=0.3.7",
    "scipy>=1.6.1,<=1.11.4",
    "sympy>=1.14.0",
    "tensorflow>=2.18.1",
    "tqdm>=4.67.1",
]


